fix(title-page): add title page to blog posts

--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -23,10 +23,10 @@ interface Props {
     }
 }
 
-const { title, frontmatter } = Astro.props;
+const { frontmatter } = Astro.props;
 ---
 
-<Layout title={title} description={frontmatter.description}>
+<Layout title={frontmatter.title} description={frontmatter.description}>
     <div class="cover" style={`background-image: url(${frontmatter.image.url})`}></div>
 
     <div class="post">
