--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -4,8 +4,8 @@ const allPosts = await Astro.glob('../pages/posts/*.md');
 const recentPosts = allPosts.slice(0, 4);
 ---
 
-<div id="blog" class="blog">
-    <h1>Blog</h1>
+<section id="blog" class="blog">
+    <h2 class="title">Blog</h2>
 
     <div class="container">
         <div class="grid">
@@ -18,7 +18,7 @@ const recentPosts = allPosts.slice(0, 4);
             ))}
         </div>
     </div>
-</div>
+</section>
 
 
 <style>
@@ -26,7 +26,7 @@ const recentPosts = allPosts.slice(0, 4);
         @apply relative flex flex-col items-center py-16 border-b;
         @apply dark:border-zinc-700;
 
-        h1 {
+        .title {
             @apply font-mono my-9 text-4xl font-medium text-center;
             @apply dark:!text-slate-100;
         }
