--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,9 +9,10 @@ import config from "../config";
 interface Props {
 	title: string;
 	description: string;
+	image?: string;
 }
 
-const { title, description } = Astro.props;
+const { title, description, image } = Astro.props;
 const ga4Id = config.ga4.id;
 ---
 
@@ -25,6 +26,9 @@ const ga4Id = config.ga4.id;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<title>{title}</title>
 		<GA4 measurementId={ga4Id} />
+		<meta name="og:title" content={title} />
+		<meta name="og:description" content={description} />
+		{ image && <meta name="og:image" content={image} /> }
 	</head>
 	<body>
 		<Header />
