--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,9 +6,10 @@ import Skills from '../components/Skills.astro';
 import Layout from '../layouts/Layout.astro';
 
 const description = "Apasionado desarrollador web siempre en busca de nuevas habilidades y conocimientos. Explora mi portafolio y descubre proyectos innovadores y soluciones creativas."
+const image = "https://edcilo.com/assets/cat.svg";
 ---
 
-<Layout title="edcilo.com" description={description}>
+<Layout title="edcilo.com" description={description} image={image}>
 	<main>
 		<Hero />
 
