--- a/src/components/landing-2022/Header.astro
+++ b/src/components/landing-2022/Header.astro
@@ -1,5 +1,5 @@
 ---
-const logoUrl = "https://storage.edcilo.com/edcilo-logo-dark.svg";
+// const logoUrl = "https://storage.edcilo.com/edcilo-logo-dark.svg";
 
 import Container from "./Container.astro";
 import Logo from "./Logo.astro";
